--- a/src/main/webapp/jsps/css/book/desc.css
+++ b/src/main/webapp/jsps/css/book/desc.css
@@ -12,6 +12,6 @@ td{height: 25px;}
 .price_n {color: #c30; font-weight: bold; padding-right: 10px; font-family: Arial; font-size: 20pt; }
 ul {list-style: none;}
 li {margin: 10px;}
-#btn {background: url(/goods/images/all.png) no-repeat;display: inline-block;background-position: 0 -830px;height: 36px;width: 160px;}
-#btn:hover {background: url(/goods/images/all.png) no-repeat;display: inline-block;background-position: 0 -865px;height: 36px;width: 160px;}
-.divForm {border: 1px solid #dcdcdc;background-color: #f5f5f5;margin: 15 0 0 50; padding:20px;}
+#btn {background: url(/bookssm/images/all.png) no-repeat;display: inline-block;background-position: 0 -830px;height: 36px;width: 160px;}
+#btn:hover {background: url(/bookssm/images/all.png) no-repeat;display: inline-block;background-position: 0 -865px;height: 36px;width: 160px;}
+.divForm {border: 1px solid #dcdcdc;background-color: #f5f5f5;margin: 15px 0 0 50px; padding:20px;}
